feat/landing: banner partenaires

--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -289,13 +289,13 @@
                     <div class="row">
                         <div class="col-md mb-1">
                             <div class="wysiwyg">
-                                <h2>En production</h2>
+                                <h2>Nos partenaires en production</h2>
                                 <div class="wysiwyg mb-1">
                                     <p>Retrouvez les éditeurs partenaires en production sur les pilotes du Hub Santé.
                                     </p>
                                 </div>
                                 <div class="paragraph--lien">
-                                    <a href="/pages/travaux.html#pilotes1515" class="btn btn--style1 btn--white">15-15</a>
+                                    <a href="/pages/travaux.html#pilotes1515" class="btn btn--style1 btn--white">Liens 15-15</a>
                                 </div>
                             </div>
                         </div>
