--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -537,7 +537,7 @@
                                     openssl pkcs12 -in <span style="color: #1D71B8;"><i>cert.p12</i></span> -clcerts -nokeys -out <span style="color: #1D71B8;"> <i>publicCert.crt</i></span></span>
                                 dans laquelle vous remplacerez <span style="color: #1D71B8;"><i>cert.p12</i></span> par le <u>nom du fichier p12</u>
                                 généré sur la plateforme IGC et <span style="color: #1D71B8;"><i>publicCert.crt</i></span> par le <u>nom du domaine utilisé.crt</u> (par exemple :
-                                test.chu-rouen.fr.crt).
+                                test.chu-xxx.fr.crt).
                             </p>
 
                         </div>
