fix: Correction de la charte exposée pour ne plus mentionner Scriptal

--- a/web/landing/pages/accompagnement.html
+++ b/web/landing/pages/accompagnement.html
@@ -306,7 +306,7 @@
                 </div>
                 <div class="o-paragraph--files row col--eq-height mt-4 ">
                     <div class="o-paragraph--files__item col--eq-height col-md-4 mb-3 ">
-                        <a href="/resources/Accompagnement/general/2024.10.29 - Hub Sante - Charte d adhesion v1.2.pdf"
+                        <a href="/resources/Accompagnement/general/2024.04.25 - Hub Sante - Charte d'adhesion v1.0 - concertation editeurs.pdf"
                             class="m-file bg-gray-300 rounded-sm top-left-radius-0" target="_blank">
                             <p class="m-file__title h4 mb-1"> Charte d'adhésion
                                 <button type="button" data-toggle="tooltip" data-placement="top" data-html="true"
@@ -314,11 +314,11 @@
                                     <svg class="svg-icon svg-question-circle" aria-hidden="true" focusable="false">
                                         <use xlink:href="/svg-icons/icon-sprite.svg#question-circle"></use>
                                     </svg>
-                                    <span class="sr-only">Mis en concertation le 26 avril 2024 en v1.0</span>
+                                    <span class="sr-only">Mise en concertation le 26 avril 2024 en v1.0</span>
                                 </button>
                             </p>
                             <p class="m-file__info text-default mb-0"><I>
-                                    PDF - Version 1.2 - 0.5 Mo
+                                    PDF - Version 1.0 - 0.7 Mo
                                 </I></p>
                         </a>
                     </div>
