--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -302,6 +302,63 @@
                 <div class="js-tabcontent--container">
                     <div id="tabs-check-01" class="js-tabcontent">
                         <!-- Contenu de l'onglet 01 -->
+                        <div class="paragraph-space o-paragraph--text-media__wrapper" id="GT3">
+                            <div class="container">
+                                <div class="o-paragraph--text-media__slider">
+                                    <div class="o-paragraph--text-media__item">
+                                        <div class="o-paragraph--text-media leftVisual">
+                                            <div class="row align-items-center">
+                                                <div class="col-md mb-3 mb-md-0">
+                                                    <div class="o-paragraph--text-media__content pt-3">
+                                                        <h2 style="display: flex; align-items: center;">
+                                                            GT territoires #3
+                                                        </h2>
+                                                        <h3 class="wysiwyg mb-3 text-left"> 16 janvier 2025</h3>
+                                                        <div class="wysiwyg mb-3 text-left">
+                                                            <p>
+                                                                A destination des régions (GRADeS et ARS), et avec la
+                                                                participation de la DNS, le troisième GT
+                                                                territoire de ce début d'année a permis de partager les avancées des travaux
+                                                                du Hub Santé pour donner de la visibilité sur les
+                                                                chantiers à venir.<br>
+                                                                Plusieurs moments d'échange permettent également aux
+                                                                régions de nous poser leurs questions, et d'aborder
+                                                                leurs problématiques spécifiques pour construire, ensemble, une
+                                                                action globale pertinente.
+
+                                                            </p>
+                                                        </div>
+
+                                                        <div class="paragraph--lien">
+                                                            <div class="row align-items-center">
+                                                                <div class="col-md mb-3">
+                                                                    <a href="/resources/GT Territoires/25.01.16 - Hub Sante - GT Territoires 3.pdf"
+                                                                        class="btn btn--style1 btn--white"
+                                                                        target="_blank">Slides (pdf -
+                                                                        1.3Mo)
+                                                                    </a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md o-paragraph--text-media__media_column">
+                                                    <div
+                                                        class="o-paragraph--text-media__media rounded-md top-left-radius-0">
+                                                        <div class="o-paragraph--text-media__clip">
+                                                                <img src="/img/crea/illustrations_webinaires/GT03.png"
+                                                                    alt="" width="585" height="329" loading="lazy">
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="paragraph-space o-paragraph--text-media__wrapper" id="GT2">
                             <div class="container">
