--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -919,11 +919,11 @@
                                                         <div class="paragraph--lien">
                                                             <div class="row align-items-center">
                                                                 <div class="col-md mb-3">
-                                                                  <!--  A compléter avec le lien quand il sera disponible.
-                                                                    <a href="#"
+                                                                  
+                                                                    <a href="https://youtu.be/mcqxVSVVbXA"
                                                                         class="btn btn--style1 btn--white"
                                                                         target="_blank">Visionner
-                                                                    </a> -->
+                                                                    </a> 
                                                                 </div>
                                                                 <div class="col-md mb-3">
                                                                     <a href="/resources/projectathon/25.01.13 - Hub Sante - Projectathon 8.pdf"
@@ -939,7 +939,7 @@
                                                     <div
                                                         class="o-paragraph--text-media__media rounded-md top-left-radius-0">
                                                         <div class="o-paragraph--text-media__clip">
-                                                            <a href="https://youtu.be/1MzW_aU7_DI" target="_blank">
+                                                            <a href="https://youtu.be/mcqxVSVVbXA" target="_blank">
                                                                 <img src="/img/crea/illustrations_webinaires/Projectathon08.png"
                                                                     alt="" width="585" height="329" loading="lazy">
                                                             </a>
