feat(clients): update link in parcours

--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -338,10 +338,10 @@
                                 <i>repository</i> GitHub privé </a> permet de partager les travaux
                             et les développements réalisés par l'équipe Hub Santé.
                             Il contient notamment des <a
-                                href="https://github.com/ansforge/SAMU-Hub-Sante/tree/main/client/src/main/java/com/tutorials#readme"
+                                href="https://github.com/ansforge/SAMU-Hub-Sante/tree/main/clients/src/main/java/com/tutorials#readme"
                                 target="_blank"> <i>tutoriels Java</i></a> pour l'utilisation de
                             <a href="https://www.rabbitmq.com/tutorials" target="_blank"> <i> RabbitMQ</i></a>;
-                            ainsi que des modèles de code de client AMQP (pour lire et écrire dans les files ouvertes
+                            ainsi que des <a href="https://github.com/ansforge/SAMU-Hub-Sante/tree/main/clients/src/main/java/com/examples#readme" target="_blank">exemples de code de client AMQP</a> (pour lire et écrire dans les files ouvertes
                             par le Hub Santé)
                             en Java, Spring Boot et Python.
                         </p>
