Mise à jour site (meteo - badge- parcours - travaux)

--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -230,6 +230,10 @@
                     <div class="o-banner__content">
                         <h1> Bienvenue sur la plateforme d'interopérabilité des Urgences
                         </h1>
+                        <div class="container mt-5" ></div>
+                        <p> Consultez la
+                            <a href="https://status.hub.esante.gouv.fr/" target="_blank"> météo de la plateforme </a>.
+                        </p>
                     </div>
 
                 </div>
@@ -276,7 +280,7 @@
             <div class="bg-default pt-1 pb-2">
                 <div class="container" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
                     <a href="/pages/webinaires.html" class="btn btn--style1 btn--white mt-1">Le Hub en replay</a>
-                    <a href="/pages/accompagnement.html" class="btn btn--style1 btn--white mt-1">Accompagnement</a>
+                    <a href="/pages/accompagnement.html" class="btn btn--style1 btn--white mt-1">Ressources éditeurs</a>
                     <a href="/resources/si_samu-ficheproduit-hub.pdf" class="btn btn--style1 btn--white mt-1"
                         target="_blank">Fiche Hub Santé
                         (pdf)</a>
