--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -230,10 +230,10 @@
                     <div class="o-banner__content">
                         <h1> Bienvenue sur la plateforme d'interopérabilité des Urgences
                         </h1>
-                        <div class="container mt-5" ></div>
-                        <p> Consultez la
-                            <a href="https://status.hub.esante.gouv.fr/" target="_blank"> météo de la plateforme </a>.
-                        </p>
+                        <div class="container mt-5"> </div>             
+                          <iframe src="https://status.hub.esante.gouv.fr/badge" width="250" height="30"
+                                frameborder="0" scrolling="no" style="color-scheme: normal"
+                                href="https://status.hub.esante.gouv.fr/" target="_blank"> .></iframe>
                     </div>
 
                 </div>
@@ -275,7 +275,9 @@
                     </div>
                 </div>
             </div>
-
+                  
+                </div>
+            </div>
             <!-- Bandeau bleu -->
             <div class="bg-default pt-1 pb-2">
                 <div class="container" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
@@ -299,24 +301,26 @@
                                     </p>
                                 </div>
                                 <div class="paragraph--lien">
-                                    <a href="/pages/travaux.html#pilotes1515" class="btn btn--style1 btn--white">Liens 15-15</a>
+                                    <a href="/pages/travaux.html#pilotes1515" class="btn btn--style1 btn--white">Liens
+                                        15-15</a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-7">
-                            <div class="m-card bg-white text-center rounded-md" >
-                                
-                                <div class="m-card__img d-flex" style="justify-content: space-evenly; align-items: center; flex-wrap: wrap;">
+                            <div class="m-card bg-white text-center rounded-md">
+
+                                <div class="m-card__img d-flex"
+                                    style="justify-content: space-evenly; align-items: center; flex-wrap: wrap;">
                                     <img src="/img/logos editeurs/Appligos.jpg" alt="logo Appligos" loading="lazy">
                                     <img src="/img/logos editeurs/Scriptal.png" alt="logo Scriptal" loading="lazy">
                                 </div>
                             </div>
-                            </div>
                         </div>
                     </div>
                 </div>
-   
+            </div>
+
 
 
 
