fix: minor landing fixes

--- a/web/landing/pages/accompagnement.html
+++ b/web/landing/pages/accompagnement.html
@@ -425,7 +425,7 @@
                         <p>Chaque périmètre du DSF correspond à une version du modèle : le tableau de correspondance ci-dessous vous permet de télécharger la publication du DSF dont vous avez besoin. 
                             Chaque montée de version du format d'échanges correspond à une version du DSF, regroupant différents périmètres et leurs versions respectives. 
                             <br>Parfois, lorsque seul le périmètre fonctionnel change, la publication DSF est alors téléchargeable en cliquant sur la version du périmètre qui a changé.
-                            Les versions LTS (Long Term Support) sont des versions tabilisées ayant vocation à rester disponible sur une durée étendue.
+                            Les versions LTS (Long Term Support) sont des versions stabilisées ayant vocation à rester disponible sur une durée étendue.
                         </p>
                     </caption>
                     <thead>
