--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -796,7 +796,7 @@
                         <h2>Compatibilité Hub Santé</h2>
     
                         <div class="wysiwyg">
-                            <p> Lorsque l'intégralité d'un périmètre fonctionnel a été implémenté et validé en recette, à minima avec
+                            <p> Lorsque l'intégralité d'un périmètre fonctionnel a été implémenté et validé en recette, a minima avec
                                 l'équipe du Hub Santé (recette ANS), il est possible pour l'éditeur d'utiliser le badge Hub Santé
                                 correspondant.  La charte d'utilisation du badge
                                 est téléchargeable ci-dessous.</p>
