--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -351,7 +351,7 @@
                             <td>Scriptal (SAMU 95)
                                 <br>Appligos (SAMU 78)
                             </td>
-                            <td></td>
+                            <td> Bisom </td>
                         </tr>
                     </tbody>
                 </table>
