--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -918,7 +918,7 @@
                                                         <div class="paragraph--lien">
                                                             <div class="row align-items-center">
                                                                 <div class="col-md mb-3">
-                                                                    <a href="https://youtu.be/1MzW_aU7_DI"
+                                                                    <a href="https://youtu.be/buOsBBlgq1M"
                                                                         class="btn btn--style1 btn--white"
                                                                         target="_blank">Visionner
                                                                     </a>
@@ -937,8 +937,8 @@
                                                     <div
                                                         class="o-paragraph--text-media__media rounded-md top-left-radius-0">
                                                         <div class="o-paragraph--text-media__clip">
-                                                            <a href="https://youtu.be/1MzW_aU7_DI" target="_blank">
-                                                                <img src="/img/crea/illustrations_webinaires/Projectathon07.png"
+                                                            <a href="https://youtu.be/buOsBBlgq1M" target="_blank">
+                                                                <img src="/img/crea/illustrations_webinaires/Projectathon09.png"
                                                                     alt="" width="585" height="329" loading="lazy">
                                                             </a>
                                                         </div>
