--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -318,7 +318,7 @@
                                                             <p>
                                                                 A destination des régions (GRADeS et ARS), et avec la
                                                                 participation de la DNS, le quatrième GT
-                                                                territoire a permis de faire le point sur avancées des travaux
+                                                                territoire a permis de faire le point sur les avancées des travaux
                                                                 du Hub Santé et sur les chantiers à venir.<br>
                                                                 Plusieurs moments d'échange permettent également aux
                                                                 régions de nous poser leurs questions, et d'aborder
