--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -311,7 +311,7 @@
                                                 <div class="col-md mb-3 mb-md-0">
                                                     <div class="o-paragraph--text-media__content pt-3">
                                                         <h2 style="display: flex; align-items: center;">
-                                                            GT Métier Pilotes #1
+                                                            GT métier SAMU Pilotes #1
                                                         </h2>
                                                         <h3 class="wysiwyg mb-3 text-left"> 18 mars 2025</h3>
                                                         <div class="wysiwyg mb-3 text-left">
