--- a/web/landing/pages/accompagnement.html
+++ b/web/landing/pages/accompagnement.html
@@ -492,6 +492,15 @@
                             <td  style="text-align: center;"><strong> 1.9 (LTS) </strong></td>  
                         </tr>
 
+                        <tr>
+                            <th scope="row" style="text-align: center;"> <a href="/resources/Accompagnement/DSF/24.10.23_DSF_Hub Sante.zip"
+                                target="_blank"> 3.0 </a></th>
+                            <td  style="text-align: center;">1.5</td>
+                            <td  style="text-align: center;">2.1</td>
+                            <td  style="text-align: center;">1.7</td>
+                            <td  style="text-align: center;">1.2</td>
+                            <td  style="text-align: center;">1.9.1</td>  
+                        </tr>
 
                     </tbody>
                 </table>
